// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Should renders Container component 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div>
  <section
    class="c0"
  />
</div>
`;

exports[`Container Should renders Container component with flex-direction & justify-content values 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div>
  <section
    class="c0"
    direction="column"
  />
</div>
`;
